Refactor health and scan endpoints to remove authorization requirements
- Updated HealthEndpoints to remove authorization for the health check endpoint.
- Removed authorization requirements from ScanEndpoints for synchronous and asynchronous scanning.
- Adjusted endpoint descriptions for clarity.

Upgrade project to .NET 10 and update package references

- Changed target framework from net8.0 to net10.0.
- Updated package references for Asp.Versioning.Http, Asp.Versioning.Mvc.ApiExplorer, NSwag, and Swashbuckle.AspNetCore to compatible versions.

Refactor background processing services

- Introduced IBackgroundTaskQueue interface and its implementation using Channel for task queuing.
- Replaced IBackgroundServiceFactory with IBackgroundTaskQueue in relevant handlers and services.
- Updated QueuedHostedService to process tasks from the new background task queue.

Add integration tests for health and scan endpoints

- Created integration tests for Health and Scan endpoints to validate responses and functionality.
- Mocked dependencies for ClamAvInfoService and ScanProcessingService in tests.

Implement unit tests for services

- Added unit tests for BackgroundTaskQueue, ClamAvInfoService, QueuedHostedService, and ScanJobService to ensure correct behavior and functionality.

--- a/.github/workflows/ci-pack-api-client.yml
+++ b/.github/workflows/ci-pack-api-client.yml
@@ -16,7 +16,7 @@ jobs:
     with:
       project_name: GovUK.Dfe.ClamAV.Api.Client
       project_path: src/GovUK.Dfe.ClamAV.Api.Client
-      run_tests: false
+      run_tests: true
 
   pack-and-release:
     needs: build-and-test
