--- a/src/GovUK.Dfe.ClamAV/appsettings.json
+++ b/src/GovUK.Dfe.ClamAV/appsettings.json
@@ -6,13 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Authorization": {
-    "Policies": [
-      {
-        "Name": "CanRead",
-        "Operator": "OR",
-        "Roles": [ "API.Read" ]
-      }
-    ]
+  "BackgroundProcessing": {
+    "MaxConcurrentWorkers": 4
   }
 }
