--- a/src/GovUK.Dfe.ClamAV/GovUK.Dfe.ClamAV.csproj
+++ b/src/GovUK.Dfe.ClamAV/GovUK.Dfe.ClamAV.csproj
@@ -1,21 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="GovUK.Dfe.CoreLibs.AsyncProcessing" Version="1.0.13" />
-		<PackageReference Include="GovUK.Dfe.CoreLibs.Security" Version="1.1.18" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
+		<PackageReference Include="Asp.Versioning.Http" Version="8.1.0" />
+		<PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
 		<PackageReference Include="NClam" Version="7.0.0" />
-		<PackageReference Include="NSwag.AspNetCore" Version="14.6.2" />
-		<PackageReference Include="NSwag.MSBuild" Version="14.6.2">
+		<PackageReference Include="NSwag.AspNetCore" Version="14.3.0" />
+		<PackageReference Include="NSwag.MSBuild" Version="14.3.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
 	</ItemGroup>
 	<Target Name="NSwag" BeforeTargets="AfterBuild" Condition="'$(CI)'!='true'">
 		<Exec ConsoleToMSBuild="true" ContinueOnError="true" Command="$(NSwagExe_Net80) run ../GovUK.Dfe.ClamAV.Api.Client/nswag.json">
