Update freshclam configuration and README to include additional signatures for improved detection

--- a/conf/freshclam.conf
+++ b/conf/freshclam.conf
@@ -4,3 +4,6 @@ CompressLocalDatabase yes
 Foreground yes
 UpdateLogFile /var/log/clamav/freshclam.log
 LogVerbose yes
+
+#some additional signatures to improve detection
+DatabaseCustomURL http://mirror.seichter.de/sanesecurity/rogue.hdb
