feat: Add Application Insights integration for enhanced telemetry and monitoring
- Introduced Application Insights connection string parameter to enable telemetry.
- Updated Bicep modules to support Application Insights configuration.
- Enhanced logging with Application Insights for scan operations, including success and failure tracking.
- Implemented telemetry service to track scan duration, malware detections, queue depth, and worker utilization.
- Added support for JSON scan requests and responses in the API client.
- Updated README and parameter files to document Application Insights and monitoring features.
- Created a new Bicep module for deploying Application Insights linked to a Log Analytics workspace.
- Improved logging in the start script to forward ClamAV logs to stdout for better observability.

--- a/src/Arcus.ClamAV/appsettings.Production.json
+++ b/src/Arcus.ClamAV/appsettings.Production.json
@@ -4,8 +4,14 @@
       "Default": "Warning",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft": "Warning",
+      "Microsoft.ApplicationInsights": "Information",
       "System": "Warning"
     }
+  },
+  "ApplicationInsights": {
+    "EnableAdaptiveSampling": true,
+    "SamplingPercentage": 100,
+    "ConnectionString": ""
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
