--- a/src/Arcus.ClamAV/appsettings.json
+++ b/src/Arcus.ClamAV/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApplicationInsights": {
+    "EnableAdaptiveSampling": true,
+    "SamplingPercentage": 100,
+    "ConnectionString": ""
+  },
   "AllowedHosts": "*",
   "BackgroundProcessing": {
     "MaxConcurrentWorkers": 4
