--- a/conf/clamd.conf
+++ b/conf/clamd.conf
@@ -2,7 +2,7 @@ TCPSocket 3310
 TCPAddr 127.0.0.1
 Foreground true
 LogTime true
-LogFile /var/log/clamav/clamd.log
+# LogFile disabled for Docker - logs go to stdout
 MaxFileSize 200M
 MaxScanSize 250M
 StreamMaxLength 200M
