--- a/conf/freshclam.conf
+++ b/conf/freshclam.conf
@@ -2,7 +2,7 @@ DatabaseMirror http://database.clamav.net
 DNSDatabaseInfo current.cvd.clamav.net
 CompressLocalDatabase yes
 Foreground yes
-UpdateLogFile /var/log/clamav/freshclam.log
+# UpdateLogFile disabled for Docker - logs go to stdout
 LogVerbose yes
 
 #some additional signatures to improve detection
