--- a/.github/workflows/container-security.yml
+++ b/.github/workflows/container-security.yml
@@ -34,12 +34,12 @@ jobs:
           output-file: hadolint-results.sarif
 
       - name: Upload hadolint Results
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
+        uses: github/codeql-action/upload-sarif@v4
+        if: always() && hashFiles('hadolint-results.sarif') != ''
         with:
           sarif_file: hadolint-results.sarif
-          tool_name: hadolint
-          wait_for_processing: true
+          category: hadolint
+          wait-for-processing: true
 
   trivy-image:
     name: Trivy Image Scan
@@ -61,12 +61,12 @@ jobs:
           severity: CRITICAL,HIGH
 
       - name: Upload Trivy Container Scan Results
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
+        uses: github/codeql-action/upload-sarif@v4
+        if: always() && hashFiles('trivy-container-results.sarif') != ''
         with:
           sarif_file: trivy-container-results.sarif
-          tool_name: Trivy
-          category: container-scan
+          category: trivy-container
+          wait-for-processing: true
 
   trivy-dockerfile:
     name: Trivy Dockerfile Scan
@@ -85,12 +85,12 @@ jobs:
           severity: CRITICAL,HIGH
 
       - name: Upload Trivy Dockerfile Scan Results
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
+        uses: github/codeql-action/upload-sarif@v4
+        if: always() && hashFiles('trivy-dockerfile-results.sarif') != ''
         with:
           sarif_file: trivy-dockerfile-results.sarif
-          tool_name: Trivy
-          category: dockerfile-scan
+          category: trivy-dockerfile
+          wait-for-processing: true
 
   container-security-summary:
     name: Container Security Summary
