--- a/.github/workflows/pr-analytics.yml
+++ b/.github/workflows/pr-analytics.yml
@@ -121,77 +121,6 @@ jobs:
               body: comment
             });
 
-  pr-conventional-commits:
-    name: Conventional Commits Check
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Check Conventional Commits
-        id: commits
-        run: |
-          # Get all commit messages in this PR
-          COMMITS=$(git log origin/${{ github.base_ref }}...HEAD --pretty=format:"%s")
-          
-          # Count commits matching conventional commit format
-          # Format: type(scope): description
-          # Valid types: feat, fix, docs, style, refactor, perf, test, chore, ci, build
-          VALID_COMMITS=0
-          INVALID_COMMITS=""
-          
-          while IFS= read -r commit; do
-            if [[ $commit =~ ^(feat|fix|docs|style|refactor|perf|test|chore|ci|build)(\([a-z-]+\))?:.* ]]; then
-              ((VALID_COMMITS++))
-            else
-              INVALID_COMMITS="${INVALID_COMMITS}${commit}"$'\n'
-            fi
-          done <<< "$COMMITS"
-          
-          TOTAL_COMMITS=$(echo "$COMMITS" | wc -l)
-          
-          echo "VALID_COMMITS=$VALID_COMMITS" >> $GITHUB_OUTPUT
-          echo "TOTAL_COMMITS=$TOTAL_COMMITS" >> $GITHUB_OUTPUT
-          
-          if [ -n "$INVALID_COMMITS" ]; then
-            echo "INVALID_COMMITS<<EOF" >> $GITHUB_OUTPUT
-            echo "$INVALID_COMMITS" >> $GITHUB_OUTPUT
-            echo "EOF" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Post Commit Analysis
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const validCommits = '${{ steps.commits.outputs.VALID_COMMITS }}';
-            const totalCommits = '${{ steps.commits.outputs.TOTAL_COMMITS }}';
-            const invalidCommits = `${{ steps.commits.outputs.INVALID_COMMITS }}`.trim();
-            
-            let comment = `## 📝 Commit Message Analysis\n\n`;
-            comment += `| Category | Count |\n|----------|-------|\n`;
-            comment += `| Valid Conventional Commits | ${validCommits} |\n`;
-            comment += `| Total Commits | ${totalCommits} |\n`;
-            comment += `| Compliance | ${Math.round((validCommits / totalCommits) * 100)}% |\n\n`;
-            
-            if (invalidCommits) {
-              comment += `### Messages Not Following Conventional Commits:\n`;
-              comment += `\`\`\`\n${invalidCommits}\n\`\`\`\n\n`;
-              comment += `**Tip:** Use format: \`type(scope): description\`\n`;
-              comment += `Valid types: feat, fix, docs, style, refactor, perf, test, chore, ci, build\n`;
-            } else {
-              comment += `✅ All commits follow Conventional Commits format!\n`;
-            }
-            
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: comment
-            });
-
   pr-draft-check:
     name: Draft PR Auto-Check
     runs-on: ubuntu-latest
@@ -213,7 +142,7 @@ jobs:
   pr-summary:
     name: PR Analysis Summary
     runs-on: ubuntu-latest
-    needs: [pr-size-analysis, pr-conventional-commits]
+    needs: [pr-size-analysis]
     if: always()
 
     steps:
@@ -221,5 +150,4 @@ jobs:
         run: |
           echo "## PR Analysis Complete"
           echo "✓ Size analysis and labeling"
-          echo "✓ Commit message format check"
           echo "✓ Best practices suggestions"
