feat: Update build and test workflow for improved project path handling and add CodeQL configuration

--- a/.github/workflows/build-test-template.yml
+++ b/.github/workflows/build-test-template.yml
@@ -49,8 +49,8 @@ jobs:
     - name: Build
       env:
         CI: true
-      run: |
-        dotnet build --no-restore -p:CI=${CI} ${{ inputs.project_path }}
+        PROJECT_PATH: ${{ inputs.project_path }}
+      run: dotnet build --no-restore --configuration Release -p:CI="$CI" "$PROJECT_PATH"
 
     - name: Run Tests
       if: ${{ inputs.run_tests }}
