feat: Update CodeQL and Semgrep configurations for improved output formats

--- a/.github/codeql-config.yml
+++ b/.github/codeql-config.yml
@@ -5,3 +5,6 @@ queries:
     # Disable empty catch block warnings
     disable:
       - cs/empty-catch-block
+
+paths-ignore:
+  - '**/Generated/**'
