--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ permissions:
   contents: write
   packages: write
   id-token: write
+  checks: write
+  pull-requests: write
 
 jobs:
   # Test the code before releasing
