feat: disable Swagger based on configuration settings

--- a/src/Arcus.ClamAV/appsettings.Development.json
+++ b/src/Arcus.ClamAV/appsettings.Development.json
@@ -11,5 +11,8 @@
     "TenantId": "9c7d9dd3-840c-4b3f-818e-552865082e16",
     "ClientId": "c8c632a2-acf2-48ae-b349-2b6b069edd9c",
     "Audience": "api://c8c632a2-acf2-48ae-b349-2b6b069edd9c"
+  },
+  "Swagger": {
+    "Enabled": true
   }
 }
