--- a/src/Arcus.ClamAV/appsettings.Production.json
+++ b/src/Arcus.ClamAV/appsettings.Production.json
@@ -20,6 +20,9 @@
     "ClientId": "caab150e-b75c-4251-a2ab-0fac2616784e",
     "Audience": "api://caab150e-b75c-4251-a2ab-0fac2616784e"
   },
-  "MAX_FILE_SIZE_MB": "200"
+  "MAX_FILE_SIZE_MB": "200",
+  "Swagger": {
+    "Enabled": false
+  }
 }
 
