--- a/src/Arcus.ClamAV/appsettings.json
+++ b/src/Arcus.ClamAV/appsettings.json
@@ -13,5 +13,8 @@
   "AllowedHosts": "*",
   "BackgroundProcessing": {
     "MaxConcurrentWorkers": 4
+  },
+  "Swagger": {
+    "Enabled": false
   }
 }
